--- a/gocd/build.gocd.yaml
+++ b/gocd/build.gocd.yaml
@@ -23,10 +23,7 @@ pipelines:
                - DOCKER_DEV
               tasks:
                - exec:
-                   command: cd
-                   arguments:
-                    - "~/rep"
-               - exec:
+                   working_directory: /home/yellowking/rep
                    command: make
                    arguments:
                     - "push-image"
